--- a/client/src/app/change-language/change-language.page.html
+++ b/client/src/app/change-language/change-language.page.html
@@ -25,6 +25,5 @@
 </ion-content>
 
 <ion-footer class="ion-no-border">
-    <ion-button size="large" shape="round" class="btn" (click)="languageConfirm()">{{'continue' |
-        translate}}</ion-button>
+    <ion-button size="large" shape="round" class="btn" (click)="languageConfirm()">{{ 'Continue' | translate }}</ion-button>
 </ion-footer>
