--- a/client/src/app/settings/settings.page.html
+++ b/client/src/app/settings/settings.page.html
@@ -4,7 +4,6 @@
     </ion-toolbar>
 </ion-header>
 
-
 <ion-content class="bg_color" fullscreen>
 
     <!-- <div class="buy_this_app end" (click)="buyappalert()">
@@ -78,7 +77,7 @@
             </div>
         </ion-item>
 
-        <ion-item lines="none" class="animate__animated animate__fadeInUp" (click)="help()">
+        <ion-item lines="none" class="animate__animated animate__fadeInUp" href="mailto:support@rypm.app?subject=Support Request">
             <div class="item-inner d-flex">
                 <ion-icon class="ion-text-start" [src]="helpIcon"></ion-icon>
                 <div class="text_box">
