--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -10,10 +10,10 @@
             <ion-label>{{'Activity' | translate}}</ion-label>
         </ion-tab-button>
 
-        <!--<ion-tab-button tab="chats">
+        <ion-tab-button tab="chats">
             <ion-icon name="chatbubble-outline"></ion-icon>
             <ion-label>{{'Chat' | translate}}</ion-label>
-        </ion-tab-button>-->
+        </ion-tab-button>
 
         <ion-tab-button tab="settings" id="settings">
             <ion-icon [src]="settingsIcon"></ion-icon>
