--- a/client/src/app/forgot-password/forgot-password.page.html
+++ b/client/src/app/forgot-password/forgot-password.page.html
@@ -23,7 +23,7 @@
     <div class="form">
         <ion-list>
             <ion-item class="animate__animated animate__fadeInUp">
-                <ion-input [(ngModel)]="email" labelPlacement="floating" [label]="'Email' | translate" mode="md"
+                <ion-input [(ngModel)]="email" labelPlacement="floating" [label]="'Email' | translate"
                     type="email"></ion-input>
             </ion-item>
         </ion-list>
