--- a/client/src/app/settings/my-profile/my-profile.page.html
+++ b/client/src/app/settings/my-profile/my-profile.page.html
@@ -21,7 +21,7 @@
         <div class="form">
             <ion-list>
                 <ion-item class="animate__animated animate__fadeInUp">
-                    <ion-input formControlName="name" labelPlacement="floating" [label]="'Name' | translate" mode="md"
+                    <ion-input formControlName="name" labelPlacement="floating" [label]="'Name' | translate"
                         type="name"></ion-input>
                 </ion-item>
 
