--- a/client/src/app/verification/verification.page.html
+++ b/client/src/app/verification/verification.page.html
@@ -22,7 +22,7 @@
     <div class="form">
         <ion-list lines="none">
             <ion-item lines="none" class="animate__animated animate__fadeInUp">
-                <ion-input #input labelPlacement="floating" [label]="'Verification code' | translate" mode="md"
+                <ion-input #input labelPlacement="floating" [label]="'Verification code' | translate"
                     type="number"></ion-input>
             </ion-item>
         </ion-list>
