--- a/client/src/app/settings/account/account.component.html
+++ b/client/src/app/settings/account/account.component.html
@@ -14,7 +14,7 @@
         <div class="form">
             <ion-list>
                 <ion-item class="animate__animated animate__fadeInUp">
-                    <ion-input formControlName="email" labelPlacement="floating" [label]="'Email' | translate" mode="md"
+                    <ion-input formControlName="email" labelPlacement="floating" [label]="'Email' | translate"
                         type="email"></ion-input>
                 </ion-item>
             </ion-list>
