--- a/client/src/app/sign-in/sign-in.page.scss
+++ b/client/src/app/sign-in/sign-in.page.scss
@@ -154,3 +154,17 @@ ion-header {
 ion-header {
     --ion-text-color: white
 }
+
+.d-flex-register {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.version {
+    font-size: small;
+}
+
+.padding-20 {
+    padding-top: 20px !important;
+}
