--- a/client/src/app/sign-in/sign-in.page.html
+++ b/client/src/app/sign-in/sign-in.page.html
@@ -50,7 +50,7 @@
                     </ion-col>
                 </ion-row>
             </div>
-            <div class="or_continue_with padding-20 animate__animated animate__fadeInUp">
+            <div class="or_continue_with padding-10 animate__animated animate__fadeInUp">
                 <h3 class="ion-text-center d-flex-register">
                         {{'Dont have an account?' | translate}}
                     <ion-button size="small" fill="clear" expand="round" class="animate__animated animate__fadeInUp"
@@ -59,7 +59,7 @@
                     </ion-button>
                 </h3>
             </div>
-            <div class="or_continue_with  padding-20 animate__animated animate__fadeInUp ion-text-end ">
+            <div class="or_continue_with  padding-10 animate__animated animate__fadeInUp ion-text-center ">
                 <span class="version">{{'RYPM.' | translate}} v{{version}}</span>
             </div>
         </div>
