--- a/client/src/app/sign-in/sign-in.page.html
+++ b/client/src/app/sign-in/sign-in.page.html
@@ -1,13 +1,12 @@
 <ion-header class="bg_transparent">
     <ion-toolbar>
         <ion-buttons slot="start">
-            <!-- icon="chevron-back-outline" -->
             <ion-back-button [text]="''" [icon]="'close-outline'"></ion-back-button>
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
-<ion-content class="bg_color" fullscreen>
+<ion-content class="bg_color sign-in-screen" fullscreen>
     <div class="banner">
         <div class="banner_img center_img">
             <img src="assets/images/banner_img.png" class="crop_img">
