feat css, terms, registration [ci]

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
     <ion-router-outlet></ion-router-outlet>
-    @if (showInstallButton) {
+    @if (canShowInstallButton && showInstallButton) {
         <ion-button color="light" class="ion-padding-x ion-margin-top slide-in-button" (click)="triggerInstall()">
             {{ 'Install App' | translate }} &nbsp;
             <ion-icon [src]="downloadIcon"></ion-icon>
