--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -141,3 +141,8 @@ ion-input {
         margin-right: 8px;
     }
 }
+
+body.sign-in-screen {
+    min-height: calc(100% + env(safe-area-inset-top));
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
